FIX : IMG size on mobile

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,13 @@
+@media screen and (max-width: 600px){
+    img{
+        width: 50%;
+    }
+}
 .bordas{
     padding: 10px;
-    box-shadow: 3px 2px 3px 1px rgba(78, 78, 78, 0.2);
-    border-radius: 5px;
-    margin-bottom: 15px;
+        box-shadow: 3px 2px 3px 1px rgba(78, 78, 78, 0.2);
+        border-radius: 5px;
+        margin-bottom: 15px;
 }
 /*  TUDO
 -------------------------------------------------------------------------
@@ -35,7 +40,7 @@ h1{
 /*  FIM GRID SECTION 01 
 -------------------------------------------------------------------------
 */
-    section{
+section{
     display: block;
     width: 80%;
     margin: auto;
@@ -127,8 +132,11 @@ div#divBotoes{
 .section-resultado{
     text-align: center;
 }
+/*  
+-------------------------------------------------------------------------
+    WARNING CONFIG
+*/
 #warning{
-
     text-transform: uppercase;
     animation-duration: 4s;
     animation-fill-mode: forwards;
